[gd_scene load_steps=7 format=3 uid="uid://3jwxt5nouwdn"]

[ext_resource type="Script" uid="uid://c8dlhe1jtkcii" path="res://scripts/wpn_controller.gd" id="1_ega3w"]
[ext_resource type="Texture2D" uid="uid://c12tesuff0whg" path="res://textures/elbrazodearmando.png" id="2_3lfa7"]

[sub_resource type="Animation" id="Animation_3lfa7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WpnSprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.5707963267948966]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WpnSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-14, 73)]
}

[sub_resource type="Animation" id="Animation_ega3w"]
resource_name = "shoot"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WpnSprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.23333333, 1),
"transitions": PackedFloat32Array(3.8637424, 1, 1),
"update": 0,
"values": [1.2688543661998777, 1.5707963267948966, 1.5707963267948966]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WpnSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.23333333, 1),
"transitions": PackedFloat32Array(4.5947866, 1, 1),
"update": 0,
"values": [Vector2(25.615, 60.005), Vector2(-14, 73), Vector2(-14, 73)]
}

[sub_resource type="Animation" id="Animation_mndtl"]
resource_name = "shoot_flipped"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WpnSprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.23333333, 1),
"transitions": PackedFloat32Array(3.8637424, 1, 1),
"update": 0,
"values": [1.844813019358006, 1.5707963267948966, 1.5707963267948966]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WpnSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.23333333, 1),
"transitions": PackedFloat32Array(4.5947866, 1, 1),
"update": 0,
"values": [Vector2(-21.14, 60.005), Vector2(16, 73), Vector2(16, 73)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mndtl"]
_data = {
&"RESET": SubResource("Animation_3lfa7"),
&"shoot": SubResource("Animation_ega3w"),
&"shoot_flipped": SubResource("Animation_mndtl")
}

[node name="Arm" type="Node2D"]
script = ExtResource("1_ega3w")
BARREL_POS = Vector2(0, 117.275)

[node name="WpnSprite" type="Sprite2D" parent="."]
position = Vector2(-14, 73)
rotation = 1.5707964
scale = Vector2(0.065, 0.065)
texture = ExtResource("2_3lfa7")

[node name="Barrel" type="Node2D" parent="."]
position = Vector2(0, 117.275)

[node name="ShotTimer" type="Timer" parent="."]

[node name="AnimWpn" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_mndtl")
}

[connection signal="timeout" from="ShotTimer" to="." method="_on_shot_timer_timeout"]
